--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,20 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "1.22.0",
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon"
   },
   "dependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
